--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@ __pycache__/
 .DS_Store
 data/tasknotes.db
 data/timezone.txt
+data/nodes/
+data/archived/
+data/attachments/
+data/*.md
+data/nodes/*.md
+data/archived/*.md
 tests/__pycache__/
 backend/__pycache__/
 backend/services/__pycache__/
@@ -10,3 +16,4 @@ backend/routers/__pycache__/
 backend/services/*.pyc
 frontend/static/js/*.map
 node_modules/
+*.db
